home page but not responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
     <title>Food.</title>
 </head>
+
 <body>
     <nav>
         <div class="logo">
@@ -36,6 +38,26 @@
         </div>
     </nav>
 
+    <div class="home-section">
+        <div class="text-area">
+            <h1>WELCOME TO</h1>
+            <h1 class="restaurant-name">Food.</h1>
+        </div>
+        <div class="links-area">
+            <div class="link">
+                <a href="#">About</a>
+            </div>
+            <div class="link">
+                <a href="#">Reservation</a>
+            </div>
+        </div>
+        <div class="arrows-area">
+            <div><i class="arrow down"></i></div>
+            <div><i class="arrow down"></i></div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
+
 </html>
