begin menu section, title (responsive) and menu list (not responsive yet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display" rel="stylesheet">
     <title>Food.</title>
 </head>
 
@@ -55,6 +56,21 @@
             <div><i class="arrow down"></i></div>
             <div><i class="arrow down"></i></div>
         </div>
+    </div>
+
+    <div class="menu-section">
+        <div class="menu-titles">
+            <span>Discover</span>
+            <h1>Our Menu</h1>
+        </div>
+        <ul class="menu-items">
+            <li class="menu-item"><a href="#drinks">Drinks</a></li>
+            <li class="menu-item"><a href="#starter">Starter</a></li>
+            <li class="menu-item"><a href="#lunch">Lunch</a></li>
+            <li class="menu-item"><a href="#dinner">Dinner</a></li>
+            <li class="menu-item"><a href="#dessert">Dessert</a></li>
+        </ul>
+
     </div>
 
     <script src="app.js"></script>
