begin menu text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,48 @@
             <li class="menu-item"><a href="#dinner">Dinner</a></li>
             <li class="menu-item"><a href="#dessert">Dessert</a></li>
         </ul>
-
+        <div class="menu-details">
+            <div class="drinks-menu">
+                <div class="drinks-img">
+                    <img src="./assets/drinks.jpg" alt="drinks-img">
+                </div>
+                <div class="drinks-details">
+                    <p>drinks-menu</p>
+                </div>
+            </div>
+            <div class="starter-menu">
+                <div class="starter-img">
+                    <img src="./assets/starter.jpg" alt="starter-img">
+                </div>
+                <div class="starter-details">
+<p>starter-menu</p>
+                </div>
+            </div>
+            <div class="lunch-menu">
+                <div class="lunch-img">
+                    <img src="./assets/lunch.jpg" alt="lunch-img">
+                </div>
+                <div class="lunch-details">
+<p>lunch-menu</p>
+                </div>
+            </div>
+            <div class="dinner-menu">
+                <div class="dinner-img">
+                    <img src="./assets/dinner.jpg" alt="dinner-img">
+                </div>
+                <div class="dinner-details">
+<p>dinner-menu</p>
+                </div>
+            </div>
+            <div class="dessert-menu">
+                <div class="dessert-img">
+                    <img src="./assets/dessert.jpg" alt="dessert-img">
+                </div>
+                <div class="dessert-details">
+<p>dessert-menu</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="app.js"></script>
