mise en place des grids

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
             <h1>Our Menu</h1>
         </div>
         <ul class="menu-items">
-            <li class="menu-item"><a href="#drinks">Drinks</a></li>
-            <li class="menu-item"><a href="#starter">Starter</a></li>
-            <li class="menu-item"><a href="#lunch">Lunch</a></li>
-            <li class="menu-item"><a href="#dinner">Dinner</a></li>
-            <li class="menu-item"><a href="#dessert">Dessert</a></li>
+            <li class="drinks-item"><a href="#drinks">Drinks</a></li>
+            <li class="starter-item"><a href="#starter">Starter</a></li>
+            <li class="lunch-item"><a href="#lunch">Lunch</a></li>
+            <li class="dinner-item"><a href="#dinner">Dinner</a></li>
+            <li class="dessert-item"><a href="#dessert">Dessert</a></li>
         </ul>
         <div class="menu-details">
             <div class="drinks-menu">
                 <div class="drinks-img">
-                    <img src="./assets/drinks.jpg" alt="drinks-img">
+                    <img src="./assets/drinks.jpg" alt="drinks">
                 </div>
                 <div class="drinks-details">
                     <p>drinks-menu</p>
@@ -81,34 +81,34 @@
             </div>
             <div class="starter-menu">
                 <div class="starter-img">
-                    <img src="./assets/starter.jpg" alt="starter-img">
+                    <img src="./assets/starter.jpg" alt="starter">
                 </div>
                 <div class="starter-details">
-<p>starter-menu</p>
+                    <p>starter-menu</p>
                 </div>
             </div>
             <div class="lunch-menu">
                 <div class="lunch-img">
-                    <img src="./assets/lunch.jpg" alt="lunch-img">
+                    <img src="./assets/lunch.jpg" alt="lunch">
                 </div>
                 <div class="lunch-details">
-<p>lunch-menu</p>
+                    <p>lunch-menu</p>
                 </div>
             </div>
             <div class="dinner-menu">
                 <div class="dinner-img">
-                    <img src="./assets/dinner.jpg" alt="dinner-img">
+                    <img src="./assets/dinner.jpg" alt="dinner">
                 </div>
                 <div class="dinner-details">
-<p>dinner-menu</p>
+                    <p>dinner-menu</p>
                 </div>
             </div>
             <div class="dessert-menu">
                 <div class="dessert-img">
-                    <img src="./assets/dessert.jpg" alt="dessert-img">
+                    <img src="./assets/dessert.jpg" alt="dessert">
                 </div>
                 <div class="dessert-details">
-<p>dessert-menu</p>
+                    <p>dessert-menu</p>
                 </div>
             </div>
         </div>
