menu display when click on menu item

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="dessert-item"><a href="#dessert">Dessert</a></li>
         </ul>
         <div class="menu-details">
-            <div class="drinks-menu">
+            <div id="drinks-menu">
                 <div class="drinks-img">
                     <img src="./assets/drinks.jpg" alt="drinks">
                 </div>
@@ -79,7 +79,7 @@
                     <p>drinks-menu</p>
                 </div>
             </div>
-            <div class="starter-menu">
+            <div id="starter-menu">
                 <div class="starter-img">
                     <img src="./assets/starter.jpg" alt="starter">
                 </div>
@@ -87,7 +87,7 @@
                     <p>starter-menu</p>
                 </div>
             </div>
-            <div class="lunch-menu">
+            <div id="lunch-menu">
                 <div class="lunch-img">
                     <img src="./assets/lunch.jpg" alt="lunch">
                 </div>
@@ -95,7 +95,7 @@
                     <p>lunch-menu</p>
                 </div>
             </div>
-            <div class="dinner-menu">
+            <div id="dinner-menu">
                 <div class="dinner-img">
                     <img src="./assets/dinner.jpg" alt="dinner">
                 </div>
@@ -103,7 +103,7 @@
                     <p>dinner-menu</p>
                 </div>
             </div>
-            <div class="dessert-menu">
+            <div id="dessert-menu">
                 <div class="dessert-img">
                     <img src="./assets/dessert.jpg" alt="dessert">
                 </div>
