creation testimonial section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="menu-section">
-        <div class="menu-titles">
+        <div class="section-titles">
             <span>Discover</span>
             <h1>Our Menu</h1>
         </div>
@@ -112,6 +112,32 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="testimonial-section">
+        
+        <div class="section-titles">
+            <span>Testimonial</span>
+            <h1>What they say about us</h1>
+        </div>
+
+        <div class="testimonial-text">
+            <div class="first-testimonial">
+                <p class="text-testimonial">Videat validum apud similia quem visa est omnis perferentem nequi lavacro aegritudine colligati corpus satis corpus validum missos capite visa.</p>
+                <p class="contact-testimonial">Helen Whiteside</p>
+            </div>
+
+            <div class="second-testimonial">
+                <p class="text-testimonial">Hoc satietates autem quaestio homine quaeque ea aliarum solemus simul multos satietates dicitur amicitia rerum modios est quod ut sit.</p>
+                <p class="contact-testimonial">Anna Laubach</p>
+            </div>
+            
+            <div class="third-testimonial">
+                <p class="text-testimonial">Atrox modo vigore interceperat et atrox quod acciderat Theophilum reclamante malum dignus casus innoxius innoxius interceperat exsecratione exsecratione isdem diebus.</p>
+                <p class="contact-testimonial">Vincent Lutz</p>
+            </div>
+        </div>
+
     </div>
 
     <script src="app.js"></script>
