--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display" rel="stylesheet">
     <title>Food.</title>
@@ -115,32 +116,49 @@
     </div>
 
     <div class="testimonial-section">
-        
+
         <div class="section-titles">
             <span>Testimonial</span>
             <h1>What they say about us</h1>
         </div>
 
-        <div class="testimonial-text">
-            <div class="first-testimonial">
-                <p class="text-testimonial">Videat validum apud similia quem visa est omnis perferentem nequi lavacro aegritudine colligati corpus satis corpus validum missos capite visa.</p>
-                <p class="contact-testimonial">Helen Whiteside</p>
-            </div>
-
-            <div class="second-testimonial">
-                <p class="text-testimonial">Hoc satietates autem quaestio homine quaeque ea aliarum solemus simul multos satietates dicitur amicitia rerum modios est quod ut sit.</p>
-                <p class="contact-testimonial">Anna Laubach</p>
-            </div>
-            
-            <div class="third-testimonial">
-                <p class="text-testimonial">Atrox modo vigore interceperat et atrox quod acciderat Theophilum reclamante malum dignus casus innoxius innoxius interceperat exsecratione exsecratione isdem diebus.</p>
-                <p class="contact-testimonial">Vincent Lutz</p>
+        <div class="splide">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
+                        <p class="text-testimonial">Videat validum apud similia quem visa est omnis perferentem nequi
+                            lavacro aegritudine colligati corpus satis corpus validum missos capite visa.</p>
+                        <p class="contact-testimonial">Helen Whiteside</p>
+                    </li>
+                    <li class="splide__slide">
+                        <p class="text-testimonial">Hoc satietates autem quaestio homine quaeque ea aliarum solemus
+                            simul multos satietates dicitur amicitia rerum modios est quod ut sit.</p>
+                        <p class="contact-testimonial">Anna Laubach</p>
+                    </li>
+                    <li class="splide__slide">
+                        <p class="text-testimonial">Atrox modo vigore interceperat et atrox quod acciderat Theophilum
+                            reclamante malum dignus casus innoxius innoxius interceperat exsecratione exsecratione isdem
+                            diebus.</p>
+                        <p class="contact-testimonial">Vincent Lutz</p>
+                    </li>
+                </ul>
             </div>
         </div>
-
     </div>
 
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+
+    <script>
+        const splide = new Splide('.splide', {
+            type: 'loop',
+            perPage: 1,
+            perMove: 1,
+            width: '900px',
+	        autoplay: true,
+        }).mount();
+
+    </script>
 </body>
 
 </html>
