description, contact & reservation

--- a/index.html
+++ b/index.html
@@ -59,6 +59,40 @@
         </div>
     </div>
 
+    <div class="description-section">
+        <div class="section-titles">
+            <span>About us</span>
+            <h1>Our story</h1>
+        </div>
+
+        <div>
+            <div class="decription-item">
+                <p>Nulla eu ex facilisis, luctus arcu blandit, facilisis leo. Nunc pharetra iaculis maximus. Donec ut
+                    volutpat odio. Duis eget aliquam diam, a convallis nunc. Proin metus massa, pretium eu lorem nec,
+                    ultricies pharetra sapien. Nulla blandit eros nec felis tristique rhoncus. Praesent in maximus mi,
+                    vitae fringilla ligula. Aenean id dapibus nibh. Quisque fringilla iaculis volutpat. Sed id metus
+                    sodales, lobortis ipsum eget, fringilla dui. Etiam porttitor risus suscipit bibendum aliquam.
+                    Aliquam interdum accumsan elementum.</p>
+            </div>
+            <div class="values-item">
+                <div class="authentic-item">
+                    <h3>Authentic</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet lectus risus.</p>
+                </div>
+                <div class="fresh-item">
+                    <h3>Fresh Food</h3>
+                    <p>Mauris sit amet nisl nec neque porta blandit sit amet ultrices lacus. Sed pharetra ipsum vel nibh
+                        auctor, id laoreet lectus viverra.</p>
+                </div>
+                <div class="friendly-item">
+                    <h3>Friendly</h3>
+                    <p>Praesent quis turpis ut odio luctus bibendum eu in purus. Pellentesque nec leo nec dui porttitor
+                        commodo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="menu-section">
         <div class="section-titles">
             <span>Discover</span>
@@ -146,6 +180,42 @@
         </div>
     </div>
 
+    <div class="reservation-section">
+        <div class="section-titles">
+            <span>Reservation</span>
+            <h1>Book a table</h1>
+        </div>
+
+
+    </div>
+
+    <div class="contact-section">
+        <div class="section-titles">
+            <span>Contact</span>
+            <h1>Send us a message</h1>
+        </div>
+
+        <div>
+            <form action="">
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="First name">
+
+                <label for="fname">Last Name</label>
+                <input type="text" id="fname" name="lastname" placeholder="Last name">
+
+                <label for="fphone">Phone number</label>
+                <input type="tel" id="fphone" name="phonenumber" placeholder="Phone number">
+
+                <label for="fmessage">Message</label>
+                <textarea id="fmessage" name="message" placeholder="Message"></textarea>
+
+                <input type="submit" value="Submit">
+
+            </form>
+        </div>
+    </div>
+
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 
@@ -155,7 +225,7 @@
             perPage: 1,
             perMove: 1,
             width: '900px',
-	        autoplay: true,
+            autoplay: true,
         }).mount();
 
     </script>
