--- a/index.html
+++ b/index.html
@@ -65,29 +65,40 @@
             <h1>Our story</h1>
         </div>
 
-        <div>
-            <div class="decription-item">
-                <p>Nulla eu ex facilisis, luctus arcu blandit, facilisis leo. Nunc pharetra iaculis maximus. Donec ut
-                    volutpat odio. Duis eget aliquam diam, a convallis nunc. Proin metus massa, pretium eu lorem nec,
-                    ultricies pharetra sapien. Nulla blandit eros nec felis tristique rhoncus. Praesent in maximus mi,
-                    vitae fringilla ligula. Aenean id dapibus nibh. Quisque fringilla iaculis volutpat. Sed id metus
-                    sodales, lobortis ipsum eget, fringilla dui. Etiam porttitor risus suscipit bibendum aliquam.
-                    Aliquam interdum accumsan elementum.</p>
+        <div class="description-area">
+            <div class="description-img">
+                <img src="./assets/about-us.jpg" alt="about-us">
             </div>
-            <div class="values-item">
-                <div class="authentic-item">
-                    <h3>Authentic</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet lectus risus.</p>
+
+            <div class="description-text">
+                <div class="decription-item">
+                    <p>Nulla eu ex facilisis, luctus arcu blandit, facilisis leo. Nunc pharetra iaculis maximus. Donec
+                        ut
+                        volutpat odio. Duis eget aliquam diam, a convallis nunc. Proin metus massa, pretium eu lorem
+                        nec,
+                        ultricies pharetra sapien. Nulla blandit eros nec felis tristique rhoncus. Praesent in maximus
+                        mi,
+                        vitae fringilla ligula. Aenean id dapibus nibh. Quisque fringilla iaculis volutpat. Sed id metus
+                        sodales, lobortis ipsum eget, fringilla dui. Etiam porttitor risus suscipit bibendum aliquam.
+                        Aliquam interdum accumsan elementum.</p>
                 </div>
-                <div class="fresh-item">
-                    <h3>Fresh Food</h3>
-                    <p>Mauris sit amet nisl nec neque porta blandit sit amet ultrices lacus. Sed pharetra ipsum vel nibh
-                        auctor, id laoreet lectus viverra.</p>
-                </div>
-                <div class="friendly-item">
-                    <h3>Friendly</h3>
-                    <p>Praesent quis turpis ut odio luctus bibendum eu in purus. Pellentesque nec leo nec dui porttitor
-                        commodo.</p>
+                <div class="values-item">
+                    <div class="authentic-item">
+                        <h3>Authentic</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet lectus risus.</p>
+                    </div>
+                    <div class="fresh-item">
+                        <h3>Fresh Food</h3>
+                        <p>Mauris sit amet nisl nec neque porta blandit sit amet ultrices lacus. Sed pharetra ipsum vel
+                            nibh
+                            auctor, id laoreet lectus viverra.</p>
+                    </div>
+                    <div class="friendly-item">
+                        <h3>Friendly</h3>
+                        <p>Praesent quis turpis ut odio luctus bibendum eu in purus. Pellentesque nec leo nec dui
+                            porttitor
+                            commodo.</p>
+                    </div>
                 </div>
             </div>
         </div>
