--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="description-text">
-                <div class="decription-item">
+                <div class="description-item">
                     <p>Nulla eu ex facilisis, luctus arcu blandit, facilisis leo. Nunc pharetra iaculis maximus. Donec
                         ut
                         volutpat odio. Duis eget aliquam diam, a convallis nunc. Proin metus massa, pretium eu lorem
