description new grid structure

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <img src="./assets/about-us.jpg" alt="about-us">
             </div>
 
-            <div class="description-text">
-                <div class="description-item">
+            <div class="dscription-right-section">
+                <div class="description-text">
                     <p>Nulla eu ex facilisis, luctus arcu blandit, facilisis leo. Nunc pharetra iaculis maximus. Donec
                         ut
                         volutpat odio. Duis eget aliquam diam, a convallis nunc. Proin metus massa, pretium eu lorem
@@ -82,19 +82,32 @@
                         sodales, lobortis ipsum eget, fringilla dui. Etiam porttitor risus suscipit bibendum aliquam.
                         Aliquam interdum accumsan elementum.</p>
                 </div>
+
+                <div class="value-title-items">
+                    <div class="authentic-title">
+                        <i class="fas fa-utensils"></i>
+                        <h3>Authentic</h3>
+                    </div>
+                    <div class="fresh-title">
+                        <i class="fab fa-pagelines"></i>
+                        <h3>Fresh Food</h3>
+                    </div>
+                    <div class="friendly-title">
+                        <i class="fas fa-users"></i>
+                        <h3>Friendly</h3>
+                    </div>
+                </div>
+
                 <div class="values-item">
                     <div class="authentic-item">
-                        <h3>Authentic</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet lectus risus.</p>
                     </div>
                     <div class="fresh-item">
-                        <h3>Fresh Food</h3>
                         <p>Mauris sit amet nisl nec neque porta blandit sit amet ultrices lacus. Sed pharetra ipsum vel
                             nibh
                             auctor, id laoreet lectus viverra.</p>
                     </div>
                     <div class="friendly-item">
-                        <h3>Friendly</h3>
                         <p>Praesent quis turpis ut odio luctus bibendum eu in purus. Pellentesque nec leo nec dui
                             porttitor
                             commodo.</p>
@@ -102,6 +115,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="menu-section">
@@ -229,6 +243,7 @@
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+    <script src="https://kit.fontawesome.com/4a97e87fea.js" crossorigin="anonymous"></script>
 
     <script>
         const splide = new Splide('.splide', {
