--- a/index.html
+++ b/index.html
@@ -221,21 +221,17 @@
         </div>
 
         <div>
-            <form action="">
+            <form class="contact-form" action="">
 
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="First name">
+                <input type="text" class="contact-form-text" placeholder="Your name">
 
-                <label for="fname">Last Name</label>
-                <input type="text" id="fname" name="lastname" placeholder="Last name">
+                <input type="email" class="contact-form-text" placeholder="Your email">
 
-                <label for="fphone">Phone number</label>
-                <input type="tel" id="fphone" name="phonenumber" placeholder="Phone number">
+                <input type="tel" class="contact-form-text" placeholder="Your phone">
 
-                <label for="fmessage">Message</label>
-                <textarea id="fmessage" name="message" placeholder="Message"></textarea>
+                <textarea class="contact-form-text" placeholder="Message"></textarea>
 
-                <input type="submit" value="Submit">
+                <input class="contact-form-btn" type="submit" value="Submit">
 
             </form>
         </div>
