--- a/index.html
+++ b/index.html
@@ -237,6 +237,32 @@
         </div>
     </div>
 
+    <div class="footer-section">
+        <div class="footer-content">
+            <div class="footer-address">
+                <h3>Address</h3>
+                <p>Food, 2085 Broadway, New York</p>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact info</h3>
+                <p>+1 888-999-4444</p>
+                <p>food-restaurant@gmail.com</p>
+                <p>Lunch: Everyday</p>
+                <p>11:00-14:00</p>
+                <p>Dinner: Everyday</p>
+                <p>19:00-23:00</p>
+            </div>
+            <div class="footer-social-media">
+                <h3>Follow us</h3>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>COPYRIGHT © SELFEUSE 2021. ALL RIGHT RESERVED</p>
+        </div>
+    </div>
+
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
     <script src="https://kit.fontawesome.com/4a97e87fea.js" crossorigin="anonymous"></script>
