correction space title

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <h1>Send us a message</h1>
         </div>
 
-        <div>
+        <div class="contact-content">
             <form class="contact-form" action="">
 
                 <input type="text" class="contact-form-text" placeholder="Your name">
