--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
 
         <ul class="nav-links">
             <li>
-                <a href="#">Home</a>
+                <a href="#home">Home</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="#description">About</a>
             </li>
             <li>
-                <a href="#">Menu</a>
+                <a href="#menu">Menu</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#reservation">Reservation</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
 
@@ -40,17 +43,17 @@
         </div>
     </nav>
 
-    <div class="home-section">
+    <div id="home" class="home-section">
         <div class="text-area">
             <h1>WELCOME TO</h1>
             <h1 class="restaurant-name">Food.</h1>
         </div>
         <div class="links-area">
             <div class="link">
-                <a href="#">About</a>
+                <a href="#description">About</a>
             </div>
             <div class="link">
-                <a href="#">Reservation</a>
+                <a href="#reservation">Reservation</a>
             </div>
         </div>
         <div class="arrows-area">
@@ -59,7 +62,7 @@
         </div>
     </div>
 
-    <div class="description-section">
+    <div id="description" class="description-section">
         <div class="section-titles">
             <span>About us</span>
             <h1>Our story</h1>
@@ -118,7 +121,7 @@
     </div>
     </div>
 
-    <div class="menu-section">
+    <div id="menu" class="menu-section">
         <div class="section-titles">
             <span>Discover</span>
             <h1>Our Menu</h1>
@@ -205,7 +208,7 @@
         </div>
     </div>
 
-    <div class="reservation-section">
+    <div id="reservation" class="reservation-section">
         <div class="section-titles">
             <span>Reservation</span>
             <h1>Book a table</h1>
@@ -262,7 +265,7 @@
 
     </div>
 
-    <div class="contact-section">
+    <div id="contact" class="contact-section">
         <div class="section-titles">
             <span>Contact</span>
             <h1>Send us a message</h1>
