--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="nav-section">
         <div class="logo">
             <h1>Food.</h1>
         </div>
@@ -49,10 +49,10 @@
             <h1 class="restaurant-name">Food.</h1>
         </div>
         <div class="links-area">
-            <div class="link">
+            <div class="link link-description">
                 <a href="#description">About</a>
             </div>
-            <div class="link">
+            <div class="link link-reservation">
                 <a href="#reservation">Reservation</a>
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <img src="./assets/about-us.jpg" alt="about-us">
             </div>
 
-            <div class="dscription-right-section">
+            <div class="description-right-section">
                 <div class="description-text">
                     <p>Nulla eu ex facilisis, luctus arcu blandit, facilisis leo. Nunc pharetra iaculis maximus. Donec
                         ut
